<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer</name>
  <version>1.0.0</version>
  <description>The robotis_engineer package</description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/RyanJaehyunShim/robotis_engineer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotis_engineer_action_editor</exec_depend>
  <exec_depend>robotis_engineer_action_module</exec_depend>
  <exec_depend>robotis_engineer_arm_module</exec_depend>
  <exec_depend>robotis_engineer_balance_control</exec_depend>
  <exec_depend>robotis_engineer_control_gui</exec_depend>
  <exec_depend>robotis_engineer_description</exec_depend>
  <exec_depend>robotis_engineer_head_module</exec_depend>
  <exec_depend>robotis_engineer_kdl</exec_depend>
  <exec_depend>robotis_engineer_manager</exec_depend>
  <exec_depend>robotis_engineer_online_walking_module</exec_depend>
  <exec_depend>robotis_engineer_tester</exec_depend>
  <exec_depend>robotis_engineer_waist_module</exec_depend>
  <exec_depend>robotis_engineer_walking_module</exec_depend>
  <exec_depend>open_cr_module</exec_depend>
  <export><metapackage/></export>
</package>
