<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_action_editor</name>
  <version>1.0.0</version>
  <description>The robotis_engineer_action_editor package</description>
  <license>Apache 2.0</license>
  <author>Jay Song</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer</url>
  <buildtool_depend>catkin</buildtool_depend>  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_device</depend>
  <depend>robotis_engineer_action_module</depend>
  <depend>libncurses-dev</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>robotis_engineer_manager</exec_depend>
  <exec_depend>ros_mpg321_player</exec_depend>
</package>
