<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_action_module</name>
  <version>1.0.0</version>
  <description>The robotis_engineer_action_module package</description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author>Jay Song</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_engineer_action_module_msgs</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>boost</depend>
</package>
