<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_control_gui</name>
  <version>1.0.0</version>
  <description>The robotis_engineer_control_gui package</description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>humanoid_nav_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_engineer_walking_module_msgs</depend>
  <depend>robotis_engineer_online_walking_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>interactive_markers</depend>
  <depend>eigen_conversions</depend>
  <depend>qt_build</depend>
  <depend>libqt4-dev</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>op3_navigation</exec_depend>
</package>
