<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_kdl</name>
  <version>1.0.0</version>
  <description>The robotis_engineer_kdl package</description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author>Jay Song</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>eigen</depend>
</package>
