<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_manager</name>
  <version>1.0.0</version>
  <description>
    The manager package for ROBOTIS ENGINEER.
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/op3_manager</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_engineer_action_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_math</depend>
  <depend>open_cr_module</depend>
  <depend>robotis_engineer_base_module</depend>
  <depend>robotis_engineer_arm_module</depend>
  <depend>robotis_engineer_action_module</depend>
  <depend>robotis_engineer_walking_module</depend>
  <depend>robotis_engineer_online_walking_module</depend>
</package>
