<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_manager</name>
  <version>1.0.0</version>
  <description>The robotis_engineer_manager package</description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_engineer_action_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_math</depend>
  <depend>robotis_engineer_base_module</depend>
  <depend>robotis_engineer_arm_module</depend>
  <depend>robotis_engineer_action_module</depend>
  <depend>robotis_engineer_walking_module</depend>
</package>
