<?xml version="1.0"?>
<package format="2">
  <name>robotis_engineer_online_walking_module</name>
  <version>1.0.0</version>
  <description>The robotis_engineer_online_walking_module package</description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/robotis_engineer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_engineer_online_walking_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>orocos_kdl</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_engineer_kdl</depend>
  <depend>robotis_device</depend>
  <depend>robotis_math</depend>
  <depend>robotis_engineer_balance_control</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
</package>
