<?xml version="1.0"?>
<package format="2">
  <name>robotis_max</name>
  <version>0.0.0</version>
  <description>The robotis_max package</description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/RyanJaehyunShim/robotis_max</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>max_action_editor</exec_depend>
  <exec_depend>max_action_module</exec_depend>
  <exec_depend>max_arm_module</exec_depend>
  <exec_depend>max_balance_control</exec_depend>
  <exec_depend>max_control_gui</exec_depend>
  <exec_depend>max_head_module</exec_depend>
  <exec_depend>max_kdl</exec_depend>
  <exec_depend>max_manager</exec_depend>
  <exec_depend>max_online_walking_module</exec_depend>
  <exec_depend>max_tester</exec_depend>
  <exec_depend>max_waist_module</exec_depend>
  <exec_depend>max_walking_module</exec_depend>
  <exec_depend>open_cr_module</exec_depend>
  <export><metapackage/></export>
</package>
