<?xml version="1.0"?>
<package format="2">
  <name>robotis_max_description</name>
  <version>0.0.0</version>
  <description>The robotis_max_description package</description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/RyanJaehyunShim/robotis_max_simulations</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
</package>